--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ DerivedData
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
+IDEWorkspaceChecks.plist
 
 ## Other
 *.xccheckout
@@ -80,3 +81,6 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+# Eclipse
+.project
