--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-sqlcipher-storage",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "SQLCipher bindings for React Native (Android & iOS)",
   "main": "sqlite.js",
   "author": "Axsy",
@@ -30,7 +30,16 @@
   },
   "homepage": "https://github.com/axsy-dev/react-native-sqlcipher-storage",
   "peerDependencies": {
-    "react-native": ">=0.40.0"
+    "react": "16.8.6",
+    "react-native": "0.60.6",
+    "react-native-windows": "^0.60.0-vnext.136"
+  },
+  "devDependencies": {
+    "@react-native-community/bob": "^0.9.5",
+    "@react-native-community/cli": "^2.0.0",
+    "react": "16.8.6",
+    "react-native": "0.60.6",
+    "react-native-windows": "^0.60.0-vnext.136"
   },
   "dependencies": {
     "base-64": "^0.1.0"
