--- a/example/package.json
+++ b/example/package.json
@@ -8,11 +8,10 @@
   },
   "dependencies": {
     "base-64": "^0.1.0",
-    "deprecated-react-native-listview": "0.0.6",
     "react": "16.8.6",
-    "react-native": "0.60.6",
-    "react-native-paper": "^3.6.0",
-    "react-native-x-bar": "^1.0.3"
+    "react-native": "^0.60.0-0",
+    "react-native-windows": "0.60.0-vnext.136",
+    "rnpm-plugin-windows": "^0.5.1-0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
